# tensorrt_backend

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  output_allocator.h  pyproject.toml
cmake/: TritonTensorRTBackendConfig.cmake.in
docs/: build_tp_engines.cpp  create_onnx_multilayer.py  multi_device.md
examples/TensorFlow_TensorRT/: README.md  config.pbtxt  tf_trt_resnet50.py  triton_client.py
examples/TensorRT/: README.md  config.pbtxt  export_resnet_to_onnx.py  triton_client.py
examples/Torch_TensorRT/: README.md  config.pbtxt  torch_trt_resnet50.py  triton_client.py
src/: constants.h  filesystem.cc  filesystem.h  instance_state.cc  instance_state.h  io_binding_info.cc  io_binding_info.h  loader.cc  loader.h  logging.cc  logging.h  model_state.cc  model_state.h  output_allocator.cc  output_allocator.h  semaphore.h  shape_tensor.cc  shape_tensor.h  shape_tesnor.cc  shared_library.cc  shared_library.h  tensorrt.cc  tensorrt_model.cc  tensorrt_model.h  tensorrt_model_instance.cc  tensorrt_model_instance.h  tensorrt_utils.cc  tensorrt_utils.h
src_trt8/: filesystem.h  instance_state.cc  instance_state.h  io_binding_info.cc  loader.h  logging.h  output_allocator.cc  semaphore.h  shared_library.cc  tensorrt_utils.cc
